OxyPlot.Wpf: added missing Annotations classes (Arrow, Polygon, Rectangle, Text) Updated WpfExamples/Examples/AnnotationDemo

--- a/Source/OxyPlot.Wpf/OxyPlot.Wpf_NET40.csproj
+++ b/Source/OxyPlot.Wpf/OxyPlot.Wpf_NET40.csproj
@@ -55,6 +55,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Annotations\Annotation.cs" />
+    <Compile Include="Annotations\ArrowAnnotation.cs" />
+    <Compile Include="Annotations\PolygonAnnotation.cs" />
+    <Compile Include="Annotations\RectangleAnnotation.cs" />
+    <Compile Include="Annotations\TextAnnotation.cs" />
     <Compile Include="Annotations\LineAnnotation.cs" />
     <Compile Include="Axes\AngleAxis.cs" />
     <Compile Include="Axes\Axis.cs" />
