ExampleLibrary: added a custom series showing 'flags' on the x-axis Axis/PlotModel: changed some methods from internal to public

--- a/Source/Examples/ExampleLibrary/ExampleLibrary.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibrary.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Attributes\ExampleAttribute.cs" />
     <Compile Include="CustomSeries\ErrorItem.cs" />
+    <Compile Include="CustomSeries\FlagSeries.cs" />
     <Compile Include="CustomSeries\LineSegmentSeries.cs" />
     <Compile Include="ExampleInfo.cs" />
     <Compile Include="Examples.cs" />
