--- a/Source/Examples/ExampleLibrary/ExampleLibrary_PCL.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibrary_PCL.csproj
@@ -44,6 +44,7 @@
     </Compile>
     <Compile Include="Attributes\ExampleAttribute.cs" />
     <Compile Include="CustomSeries\ErrorItem.cs" />
+    <Compile Include="CustomSeries\FlagSeries.cs" />
     <Compile Include="CustomSeries\LineSegmentSeries.cs" />
     <Compile Include="ExampleInfo.cs" />
     <Compile Include="Examples.cs" />
