Updated AssemblyInfo files. Included GlobalAssemblyInfo.cs in all projects.

--- a/Source/Examples/Silverlight/ExampleBrowser.Web/ExampleBrowser.Web.csproj
+++ b/Source/Examples/Silverlight/ExampleBrowser.Web/ExampleBrowser.Web.csproj
@@ -74,6 +74,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
