--- a/Source/Examples/WPF/WorldStatisticsDemo/WorldStatisticsDemo.csproj
+++ b/Source/Examples/WPF/WorldStatisticsDemo/WorldStatisticsDemo.csproj
@@ -64,6 +64,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="..\..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Model\Statistics.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
