--- a/Source/Examples/WindowsForms/ExampleBrowser/ExampleBrowser.csproj
+++ b/Source/Examples/WindowsForms/ExampleBrowser/ExampleBrowser.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
