--- a/Source/Examples/WindowsForms/WindowsFormsDemo/WindowsFormsDemo.csproj
+++ b/Source/Examples/WindowsForms/WindowsFormsDemo/WindowsFormsDemo.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
