--- a/Source/OxyPlot.MonoForAndroid/OxyPlot.MonoForAndroid.csproj
+++ b/Source/OxyPlot.MonoForAndroid/OxyPlot.MonoForAndroid.csproj
@@ -47,6 +47,9 @@
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="PlotView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OxyPlot\OxyPlotMA.csproj">
