--- a/Source/OxyPlot.OpenXml/OxyPlot.OpenXml.csproj
+++ b/Source/OxyPlot.OpenXml/OxyPlot.OpenXml.csproj
@@ -42,6 +42,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporting\WordDocumentReportWriter.cs" />
   </ItemGroup>
