--- a/Source/OxyPlot.OpenXml/OxyPlot.OpenXml_NET40.csproj
+++ b/Source/OxyPlot.OpenXml/OxyPlot.OpenXml_NET40.csproj
@@ -43,6 +43,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporting\WordDocumentReportWriter.cs" />
   </ItemGroup>
