--- a/Source/OxyPlot.Pdf/OxyPlot.Pdf_NET40.csproj
+++ b/Source/OxyPlot.Pdf/OxyPlot.Pdf_NET40.csproj
@@ -59,6 +59,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="LatexReportWriter.cs" />
     <Compile Include="RtfReportWriter.cs" />
     <Compile Include="PdfExporter.cs" />
