--- a/Source/OxyPlot.Pdf/OxyPlot.Pdf_SL5.csproj
+++ b/Source/OxyPlot.Pdf/OxyPlot.Pdf_SL5.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Windows" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="PdfExporter.cs" />
     <Compile Include="PdfRenderContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
