--- a/Source/OxyPlot.Silverlight/OxyPlot.Silverlight_SL4.csproj
+++ b/Source/OxyPlot.Silverlight/OxyPlot.Silverlight_SL4.csproj
@@ -59,6 +59,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Converters\OxyColorConverter.cs" />
     <Compile Include="Converters\ThicknessConverter.cs" />
     <Compile Include="Plot.Properties.cs" />
