--- a/Source/OxyPlot.WindowsForms/OxyPlot.WindowsForms_NET40.csproj
+++ b/Source/OxyPlot.WindowsForms/OxyPlot.WindowsForms_NET40.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Helpers\ConverterExtensions.cs" />
     <Compile Include="GraphicsRenderContext.cs" />
     <Compile Include="Plot.cs">
