--- a/Source/OxyPlot.Xps/OxyPlot.Xps.csproj
+++ b/Source/OxyPlot.Xps/OxyPlot.Xps.csproj
@@ -44,6 +44,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="XpsExporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporting\FlowDocumentReportWriter.cs" />
