--- a/Source/OxyPlot.Tests/OxyPlot.Tests.csproj
+++ b/Source/OxyPlot.Tests/OxyPlot.Tests.csproj
@@ -47,7 +47,7 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Axes\AxisTests.cs" />
-    <Compile Include="Foundation\OxyColorExtensionsTests.cs" />
+    <Compile Include="Foundation\OxyColorTests.cs" />
     <Compile Include="Foundation\ListFillerTests.cs" />
     <Compile Include="OxyAssert.cs" />
     <Compile Include="TestModels.cs" />
