Added NamespaceDoc classes (for namespace XML comments)

--- a/Source/OxyPlot.Pdf/OxyPlot.Pdf_SL5.csproj
+++ b/Source/OxyPlot.Pdf/OxyPlot.Pdf_SL5.csproj
@@ -61,6 +61,7 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="NamespaceDoc.cs" />
     <Compile Include="PdfExporter.cs" />
     <Compile Include="PdfRenderContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
