--- a/Source/OxyPlot.OpenXml/OxyPlot.OpenXml.csproj
+++ b/Source/OxyPlot.OpenXml/OxyPlot.OpenXml.csproj
@@ -45,10 +45,10 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="NamespaceDoc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporting\WordDocumentReportWriter.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\OxyPlot.Wpf\OxyPlot.Wpf.csproj">
       <Project>{698CCD8E-ADCC-4565-8517-5EDD36F07155}</Project>
