--- a/Source/OxyPlot.OpenXml/OxyPlot.OpenXml_NET40.csproj
+++ b/Source/OxyPlot.OpenXml/OxyPlot.OpenXml_NET40.csproj
@@ -46,6 +46,7 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="NamespaceDoc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporting\WordDocumentReportWriter.cs" />
   </ItemGroup>
