--- a/Source/OxyPlot.Pdf/OxyPlot.Pdf.csproj
+++ b/Source/OxyPlot.Pdf/OxyPlot.Pdf.csproj
@@ -65,6 +65,7 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="LatexReportWriter.cs" />
+    <Compile Include="NamespaceDoc.cs" />
     <Compile Include="RtfReportWriter.cs" />
     <Compile Include="PdfExporter.cs" />
     <Compile Include="PdfRenderContext.cs" />
