--- a/Source/OxyPlot.Pdf/OxyPlot.Pdf_NET40.csproj
+++ b/Source/OxyPlot.Pdf/OxyPlot.Pdf_NET40.csproj
@@ -63,6 +63,7 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="LatexReportWriter.cs" />
+    <Compile Include="NamespaceDoc.cs" />
     <Compile Include="RtfReportWriter.cs" />
     <Compile Include="PdfExporter.cs" />
     <Compile Include="PdfRenderContext.cs" />
