--- a/Source/OxyPlot.Xps/OxyPlot.Xps.csproj
+++ b/Source/OxyPlot.Xps/OxyPlot.Xps.csproj
@@ -47,6 +47,7 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="NamespaceDoc.cs" />
     <Compile Include="XpsExporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporting\FlowDocumentReportWriter.cs" />
