--- a/Source/Examples/WPF/WpfExamples/WpfExamples.csproj
+++ b/Source/Examples/WPF/WpfExamples/WpfExamples.csproj
@@ -86,6 +86,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Examples\ColorBindingDemo\MainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Examples\ContourDemo\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -185,6 +189,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DelegateCommand.cs" />
     <Compile Include="Example.cs" />
     <Compile Include="Examples\AnnotationDemo\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -205,6 +210,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Examples\BindingDemo\Measurement.cs" />
+    <Compile Include="Examples\ColorBindingDemo\MainViewModel.cs" />
+    <Compile Include="Examples\ColorBindingDemo\MainWindow.xaml.cs">
+      <DependentUpon>MainWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Examples\ContourDemo\MainViewModel.cs" />
     <Compile Include="Examples\ContourDemo\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -224,7 +233,7 @@
     <Compile Include="Examples\CsvDemo\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Examples\CsvDemo\Observable.cs" />
+    <Compile Include="Observable.cs" />
     <Compile Include="Examples\CustomTrackerDemo\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
@@ -240,7 +249,6 @@
     <Compile Include="Examples\LegendsDemo\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Examples\LegendsDemo\Observable.cs" />
     <Compile Include="Examples\PieDemo\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
@@ -302,6 +310,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="Images\ColorBindingDemo.png" />
     <Resource Include="Images\ColumnSeriesDemo.png" />
     <Resource Include="Images\TaskDemo.png" />
     <Resource Include="Images\AxesDemo.png" />
@@ -347,6 +356,9 @@
     <Resource Include="Examples\BindingDemo\WorldPopulation.xml" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Images\AnnotationDemo.png" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\..\OxyPlot.OpenXml\OxyPlot.OpenXml.csproj">
       <Project>{BB4FA452-A96A-4C47-AA65-7E88F6FAE873}</Project>
       <Name>OxyPlot.OpenXml</Name>
@@ -368,10 +380,6 @@
       <Name>OxyPlot</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\AnnotationDemo.png" />
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <UsingTask TaskName="PepitaGet.RestorePackagesTask" AssemblyFile="$(SolutionDir)..\Tools\Pepita\PepitaGet.dll" />
   <Target Name="BeforeBuild">
