Issue #10024: Change core to use PCL Changed OxyPlot core assembly to PCL (Windows Store apps, .NET 4.0 and higher, WP7 and higher, Silverlight 4 and higher)
Updated solutions to use the PCL core (except Mono solutions)

Removed TypeConverters
  (see example in Source/Examples/WPF/WpfExamples/Examples/AnnotationDemo/MainWindow.xaml
   if you need to use OxyPlot types in XAML attributes)

--- a/Source/Examples/Silverlight/SilverlightDemo/SilverlightDemo.csproj
+++ b/Source/Examples/Silverlight/SilverlightDemo/SilverlightDemo.csproj
@@ -101,9 +101,9 @@
       <Project>{2EB36333-58C3-47FD-B01F-C1C3FAF1888A}</Project>
       <Name>OxyPlot.Silverlight</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\OxyPlot\OxyPlot_SL5.csproj">
-      <Project>{ef3baa47-86e8-4256-aea8-458e3ffcbbaa}</Project>
-      <Name>OxyPlot_SL5</Name>
+    <ProjectReference Include="..\..\..\OxyPlot\OxyPlot.csproj">
+      <Project>{7a0b35c0-dd17-4964-8e9a-44d6cecdc692}</Project>
+      <Name>OxyPlot</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
