--- a/Source/Examples/Metro/ExampleBrowser/ExampleBrowser.csproj
+++ b/Source/Examples/Metro/ExampleBrowser/ExampleBrowser.csproj
@@ -105,13 +105,13 @@
       <Project>{2fa3c4d5-1b43-4191-863c-f940daa6a1ee}</Project>
       <Name>OxyPlot.Metro</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\OxyPlot\OxyPlot_PCL.csproj">
-      <Project>{7a0b35c0-dd17-4964-8e9a-44d6cecdc692}</Project>
-      <Name>OxyPlot_PCL</Name>
+    <ProjectReference Include="..\..\..\OxyPlot\OxyPlot.csproj">
+      <Project>{87f519b8-5a2f-48c6-ad53-c5f13a82ea6b}</Project>
+      <Name>OxyPlot</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\ExampleLibrary\ExampleLibrary_PCL.csproj">
-      <Project>{facb89e5-53a5-4748-9f5b-e0714ebb37b2}</Project>
-      <Name>ExampleLibrary_PCL</Name>
+    <ProjectReference Include="..\..\ExampleLibrary\ExampleLibrary.csproj">
+      <Project>{a941b658-1237-482c-b0c7-378242d27647}</Project>
+      <Name>ExampleLibrary</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
