--- a/Source/Examples/Silverlight/ExampleBrowser/ExampleBrowser_SL4.csproj
+++ b/Source/Examples/Silverlight/ExampleBrowser/ExampleBrowser_SL4.csproj
@@ -103,13 +103,13 @@
       <Project>{2eb36333-58c3-47fd-b01f-c1c3faf1888a}</Project>
       <Name>OxyPlot.Silverlight_SL4</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\OxyPlot\OxyPlot_SL4.csproj">
-      <Project>{ef3baa47-86e8-4256-aea8-458e3ffcbbaa}</Project>
-      <Name>OxyPlot_SL4</Name>
+    <ProjectReference Include="..\..\..\OxyPlot\OxyPlot.csproj">
+      <Project>{7a0b35c0-dd17-4964-8e9a-44d6cecdc692}</Project>
+      <Name>OxyPlot</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\ExampleLibrary\ExampleLibrary_SL4.csproj">
-      <Project>{a2e856eb-3f45-4ace-90fb-5440d4577de1}</Project>
-      <Name>ExampleLibrary_SL4</Name>
+    <ProjectReference Include="..\..\ExampleLibrary\ExampleLibrary.csproj">
+      <Project>{facb89e5-53a5-4748-9f5b-e0714ebb37b2}</Project>
+      <Name>ExampleLibrary</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
