--- a/Source/Examples/Silverlight/SparklineDemo/SparklineDemo.csproj
+++ b/Source/Examples/Silverlight/SparklineDemo/SparklineDemo.csproj
@@ -101,9 +101,9 @@
       <Project>{2EB36333-58C3-47FD-B01F-C1C3FAF1888A}</Project>
       <Name>OxyPlot.Silverlight</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\OxyPlot\OxyPlot_SL5.csproj">
-      <Project>{ef3baa47-86e8-4256-aea8-458e3ffcbbaa}</Project>
-      <Name>OxyPlot_SL5</Name>
+    <ProjectReference Include="..\..\..\OxyPlot\OxyPlot.csproj">
+      <Project>{7a0b35c0-dd17-4964-8e9a-44d6cecdc692}</Project>
+      <Name>OxyPlot</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
