--- a/Source/Examples/WPF/WpfExamples/WpfExamples_NET40.csproj
+++ b/Source/Examples/WPF/WpfExamples/WpfExamples_NET40.csproj
@@ -375,9 +375,9 @@
       <Project>{639e0b40-a307-4d4a-bb78-be0019d8d7c1}</Project>
       <Name>OxyPlot.Xps_NET40</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\OxyPlot\OxyPlot_NET40.csproj">
+    <ProjectReference Include="..\..\..\OxyPlot\OxyPlot.csproj">
       <Project>{87f519b8-5a2f-48c6-ad53-c5f13a82ea6b}</Project>
-      <Name>OxyPlot_NET40</Name>
+      <Name>OxyPlot</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
