--- a/Source/OxyPlot.Metro/OxyPlot.Metro.csproj
+++ b/Source/OxyPlot.Metro/OxyPlot.Metro.csproj
@@ -55,9 +55,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OxyPlot\OxyPlot_PCL.csproj">
-      <Project>{7a0b35c0-dd17-4964-8e9a-44d6cecdc692}</Project>
-      <Name>OxyPlot_PCL</Name>
+    <ProjectReference Include="..\OxyPlot\OxyPlot.csproj">
+      <Project>{87f519b8-5a2f-48c6-ad53-c5f13a82ea6b}</Project>
+      <Name>OxyPlot</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v11.0\Microsoft.Windows.UI.Xaml.CSharp.targets" />
