--- a/Source/OxyPlot.WindowsForms/OxyPlot.WindowsForms_NET40.csproj
+++ b/Source/OxyPlot.WindowsForms/OxyPlot.WindowsForms_NET40.csproj
@@ -62,9 +62,9 @@
     <None Include="OxyPlot.WindowsForms.snk" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OxyPlot\OxyPlot_NET40.csproj">
-      <Project>{87f519b8-5a2f-48c6-ad53-c5f13a82ea6b}</Project>
-      <Name>OxyPlot_NET40</Name>
+    <ProjectReference Include="..\OxyPlot\OxyPlot.csproj">
+      <Project>{7a0b35c0-dd17-4964-8e9a-44d6cecdc692}</Project>
+      <Name>OxyPlot</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
