--- a/Source/OxyPlot.Xps/OxyPlot.Xps_NET40.csproj
+++ b/Source/OxyPlot.Xps/OxyPlot.Xps_NET40.csproj
@@ -58,9 +58,9 @@
       <Project>{698ccd8e-adcc-4565-8517-5edd36f07155}</Project>
       <Name>OxyPlot.Wpf_NET40</Name>
     </ProjectReference>
-    <ProjectReference Include="..\OxyPlot\OxyPlot_NET40.csproj">
+    <ProjectReference Include="..\OxyPlot\OxyPlot.csproj">
       <Project>{87f519b8-5a2f-48c6-ad53-c5f13a82ea6b}</Project>
-      <Name>OxyPlot_NET40</Name>
+      <Name>OxyPlot</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
