IRenderContext: removed the properties PaintBackground, Width and Height. The actual width and height of the plot is now stored in the PlotModel

--- a/Source/Examples/Silverlight/ExportDemo/ExportDemo.csproj
+++ b/Source/Examples/Silverlight/ExportDemo/ExportDemo.csproj
@@ -110,6 +110,11 @@
       <Name>OxyPlot</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="..\..\ExampleLibrary\Resources\OxyPlot.png">
+      <Link>OxyPlot.png</Link>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
