--- a/Source/Examples/ExampleLibrary/ExampleLibraryMA.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibraryMA.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Examples\CategoryAxisExamples.cs" />
     <Compile Include="Examples\AxisExamples.cs" />
     <Compile Include="Examples\AreaSeriesExamples.cs" />
+    <Compile Include="Examples\ClosedIssues.cs" />
     <Compile Include="Examples\ContourSeriesExamples.cs" />
     <Compile Include="Examples\BarSeries\IntervalBarSeriesExamples.cs" />
     <Compile Include="Examples\BarSeries\RectangleBarSeriesExamples.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Examples\ExamplesBase.cs" />
     <Compile Include="Examples\ItemsSourceExamples.cs" />
     <Compile Include="Examples\FunctionSeriesExamples.cs" />
+    <Compile Include="Examples\OpenIssues.cs" />
     <Compile Include="Examples\PerformanceExamples.cs" />
     <Compile Include="Examples\ShowMeTheNumbersExamples.cs" />
     <Compile Include="Examples\DiscreteDataSeriesExamples.cs" />
